Fixed vertical alignment for rows

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,7 @@ body {
 a, a:hover {
     text-decoration: none;
     border-bottom: 1px dashed;
+    line-height: 30px;
 }
 
 #existing-rules {
@@ -59,6 +60,7 @@ div.title {
 
 div.value {
     overflow: hidden;
+    line-height: 30px;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
